--- a/1870-07-13.md
+++ b/1870-07-13.md
@@ -17,7 +17,7 @@ Il n'y aurait que le cas de guerre qui pourrait faire renoncer à Ss Ece de
 venir en France.
 
 Le bruit de cet après-midi est que la chambre veut la guerre, la Gauche même
-serait sortie de ses habitudes paficiques. La rente du reste a haussé de 40ct
+serait sortie de ses habitudes pacifiques. La rente du reste a haussé de 40ct
 sur le cours d'hier.
 
 Veuillez agréer, Monsieur, mes salutations empressées.
