--- a/docs/_posts/1870-07-11-11-juillet-1870.md
+++ b/docs/_posts/1870-07-11-11-juillet-1870.md
@@ -11,7 +11,7 @@ destination: Heidelberg
 Monsieur A. Grünberg, Heidelberg
 
 J'ai l'honneur de vous confirmer ma lettre d'hier.
-Inclus, je vous remets une lettre de Mr Jaeger, Mr L. rau m'a engagé à vous
+Inclus, je vous remets une lettre de Mr Jaeger, Mr L. Rau m'a engagé à vous
 l'envoyer.
 
 Rien de bien nouveau à vous signaler, si ce n'est cependant la situation
