--- a/docs/_posts/1870-07-12-12-juillet-1870.md
+++ b/docs/_posts/1870-07-12-12-juillet-1870.md
@@ -17,7 +17,7 @@ fesant toutes les annotations que vous m'indiquez.
 
 Rien n'a transpiré, encore, sur les dépèches de Prusse, on est cependant moins
 à la guerre qu'hier, la rente a baissé de 05ct à la première heure, mais elle
-ferme à fr. 70.60 avc une hausse de 2.20 sur le cours d'hier, ce qui fait
+ferme à fr. 70.60 avec une hausse de 2.20 sur le cours d'hier, ce qui fait
 supposer que la communication faite à la chambre, par le gouvernment, est des
 plus rassurantes.
 
