--- a/docs/_posts/1870-08-05-5-aout-1870.md
+++ b/docs/_posts/1870-08-05-5-aout-1870.md
@@ -5,7 +5,7 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Alexandrie
-note: par vapeur Anglais
+note: par Vapeur Anglais
 ---
 
 Monsieur A. Grünberg, à Alexandrie
