--- a/docs/_posts/1870-08-05-5-aout-1870.md
+++ b/docs/_posts/1870-08-05-5-aout-1870.md
@@ -33,6 +33,6 @@ acquittée pour Hadamard & Bruhl à qui Mr Jacques l'avait négociée.
 Inclus une lettre de Madame Grünberg, la copie de celle-ci vous arrivera par la
 voie de Brindisi.
 
-Agréez, Monsieur, l'expression de mes sentimes dévoués.
+Agréez, Monsieur, l'expression de mes sentiments dévoués.
 
 L. Guillier
