--- a/docs/_posts/1870-08-08-8-aout-1870.md
+++ b/docs/_posts/1870-08-08-8-aout-1870.md
@@ -33,7 +33,7 @@ frs 7,500. par le prochain bateau Français et Ss Ece ajoute qu'elle tachera de
 vous adressser 20 ou 25,000 fr, par chacun des courriers suivants, jusqu'à
 complément des frs 200,000 que vous lui avez demandés.
 
-Agréez, Monsieur, l'expression de mes sentimes dévoués.
+Agréez, Monsieur, l'expression de mes sentiments dévoués.
 
 Inclus une lettre de Madame Grünberg.
 
