--- a/docs/_posts/1870-08-31-31-aout-1870.md
+++ b/docs/_posts/1870-08-31-31-aout-1870.md
@@ -14,7 +14,7 @@ Je vous confirme, Monsieur, ma lettre du 30 Ct.
 
 Les trains de vitesse étant, pour le moment, suspendus sur la ligne du Havre,
 Mr Kunst n'a pas fait enlever la Caisse de Valeurs et attend le moment
-opportun. Par la même raison sans-doute le Grup porté de Marseille est arrêté
+opportun. Par la même raison sans-doute le Group porté de Marseille est arrêté
 à Lyon.
 
 En fait de dépêches officielles, rien ne transpire sur la position de nos corps
