--- a/docs/_posts/1870-09-02-2-septembre-1870.md
+++ b/docs/_posts/1870-09-02-2-septembre-1870.md
@@ -24,8 +24,8 @@ tenteront le siège de Paris.
 La concierge m'a présenté une note de fs 12.60 pour façon de robe de nourrice,
 j'attendrai l'autorisation de Madame Grünberg pour la payer.
 
-J'ai donné un acompte au menuisier de Croissy pour une facture d'environ fs
-160. Alexandre m'a de même demandé de l'argent je lui ai remis fs 100 à valoir.
+J'ai donné un acompte au menuisier de Croissy pour une facture d'environ fs 160.
+Alexandre m'a de même demandé de l'argent je lui ai remis fs 100 à valoir.
 
 Inclus, une lettre de Madame votre mère reçue ce matin.
 
