--- a/docs/_posts/1871-01-05-5-janvier-1871.md
+++ b/docs/_posts/1871-01-05-5-janvier-1871.md
@@ -36,6 +36,6 @@ Veuillez agréer, Monsieur, mes salutations bien empressées.
 L. Guilliez
 
 
-P.S. Gastion envoie ses compliments de bonne année à Monsieur et Madame
+P.S. Gaston envoie ses compliments de bonne année à Monsieur et Madame
 Grünberg et regrette de [illisible]
 
