--- a/docs/_posts/1871-01-06-6-janvier-1871-(Clara).md
+++ b/docs/_posts/1871-01-06-6-janvier-1871-(Clara).md
@@ -15,7 +15,7 @@ Mais confions au caprice du vent notre souvenir en nous envoyant nos souhaits
 les plus sincères, les plus vrais!
 
 Il y a dix jours, les premiers obus ont enfin paru dans les quartiers du
-Luxembourg, St Denis et Grenelle; la population parisienne n'est est pas du
+Luxembourg, St Denis et Grenelle; la population parisienne n'en est pas du
 tout effrayée, et les 110 jours de siège se supportent courageusement!
 
 Nous ne mourons pas de faim mais notre nourriture consiste en viande de cheval
