--- a/docs/_posts/1871-01-06-6-janvier-1871-(Clara).md
+++ b/docs/_posts/1871-01-06-6-janvier-1871-(Clara).md
@@ -23,7 +23,7 @@ distribuée par 40 gr. par jour tous les 4 jours, du riz, rarement au lard,
 quelques légumes conservés en boites et c'est tout. Plus de lait; un morceau de 
 pain le matin, avec du chocolat ou du vin chaud, et c'est tout.
 
-Il n'y a plus rien, rien dans les halles, c'est environ(?), une boisson de
+Il n'y a plus rien, rien dans les halles, c'est ennuieux(?), une boisson de
 pommes de terre se paierait 20 fr, un oeuf 2 francs, et des oignons 6 francs le
 litre; l'autre jour après avoir battu les halles, j'en ai rapporté un bouquet
 de persil, chose rare du moment, mais peu nutritif.
