--- a/docs/_posts/1870-08-04-4-aout-1870.md
+++ b/docs/_posts/1870-08-04-4-aout-1870.md
@@ -11,17 +11,17 @@ note: Par vapeur Français
 Monsieur A. Grünberg, Alexandrie
 
 Depuis le jour de votre départ, il ne s'est rien produit d'important au bureau.
-Les échéances des 30 juillet et 2 Ct ont été payées, à part la Tte de frs 8,000.
+Les échéances des 30 juillet et 2 Ct ont été payées, à part la Tte de fs 8,000.
 qui n'avait pas été acceptée, et pour laquelle j'ai répondu que vous n'étiez
 pas d'accord.
-Demain, Mr Kunst me remet frs 51,000. pour les Acceptations des Traites
+Demain, Mr Kunst me remet fs 51,000. pour les Acceptations des Traites
 Jacques.
 
 J'ai bien reçu votre lettre datée de Marseille du 30 juillet, et je me suis
 conformé à tout son contenu.
 
 Je me suis informé du départ des lettres, par la voie de Brindisi, elles
-doivent être mises à la Porte à Paris, tous les vendredi soirs. Tous les
+doivent être mises à la Poste à Paris, tous les vendredi soirs. Tous les
 vendredi donc, je mettrai deux plis à la Poste, l'un pour le Vapeur Anglais, et
 l'autre par voie de Brindisi.
 
