--- a/docs/_posts/1870-08-08-8-aout-1870.md
+++ b/docs/_posts/1870-08-08-8-aout-1870.md
@@ -29,9 +29,9 @@ esprits.
 J'espère en votre prochain retour.
 
 Je reçois, à l'instant, une lettre de Ss Ece datée du 31 juillet, elle annonce
-frs 7,500. par le prochain bateau Français et Ss Ece ajoute qu'elle tachera de
+fs 7,500. par le prochain bateau Français et Ss Ece ajoute qu'elle tachera de
 vous adressser 20 ou 25,000 fr, par chacun des courriers suivants, jusqu'à
-complément des frs 200,000 que vous lui avez demandés.
+complément des fs 200,000 que vous lui avez demandés.
 
 Agréez, Monsieur, l'expression de mes sentiments dévoués.
 
