--- a/docs/_posts/1870-08-12-12-aout-1870.md
+++ b/docs/_posts/1870-08-12-12-aout-1870.md
@@ -14,11 +14,11 @@ Je vous confirme, Monsieur, ma lettre du 8 Ct, l'une par Vapeur Français,
 dont inclus la copie.
 
 Mr L. Rau a reçu, ce matin, votre dépêche lui annonçant que la Maison
-Oppenheime aurait à lui compter la domme de frs 49,000. pour le Cte de Ss Ece
+Oppenheime aurait à lui compter la somme de fs 49,000. pour le Cte de Ss Ece
 Aly Pacha. Il s'est présenté chez Messrs Oppenheim & Cie qui n'avaient pas
 encore été avisés. Il se représentera demain.
 
-J'ai passé écriture à la date du 11 Ct, d'une somme de frs 90,000. encaissée
+J'ai passé écriture à la date du 11 Ct, d'une somme de fs 90,000. encaissée
 par Mr D. Kunst, pour votre compte, au crédit de Ss Ece Aly Pacha.
 
 Je vous confirme une dépêche du 10 Ct que Mr Kunst m'a chargé de vous expédier,
@@ -50,7 +50,7 @@ précaution qui ne servira à rien, car pour que les Prussiens viennent sous les
 murs de Paris, il faudrait qu'ils aient renversé un rempart de deux ou trois
 millions de poitrines humaines........
 
-Mr Kunst m'a remis aujourd'hui frs 15,000. pour l'échéance de demain,
+Mr Kunst m'a remis aujourd'hui fs 15,000. pour l'échéance de demain,
 acceptations de 5 Ttes Arnold Grünberg.
 
 Inclus une lettre de Madame Grünberg, la copie de celle-ci vous arrivera par
