--- a/docs/_posts/1870-09-24-24-septembre-1870-(clara).md
+++ b/docs/_posts/1870-09-24-24-septembre-1870-(clara).md
@@ -47,4 +47,4 @@ très bien et venait de monter sa garde.
 
 P.S. Pour vous donner, Madame, une idée du prix des vivres; le beurre vaut
 6 francs la livre; la graisse 2 francs, mais Louise et moi, nous avons notre
-provision, des oeufs 2f40 la douzaine etc etc aussi nous réduisons notre ordinaire.
+provision, des œufs 2f40 la douzaine etc etc aussi nous réduisons notre ordinaire.
