--- a/docs/_posts/1870-08-06-6-aout-1870.md
+++ b/docs/_posts/1870-08-06-6-aout-1870.md
@@ -9,8 +9,8 @@ layout: post
 > de Vienne à Paris et le départ de Paris pour Metz, a été reçu
 > hier soir par l'Empereur. Ce Directeur des affaires extérieures du
 > Ministère Austro-Hongrois est venu, nous est-il assuré, porter
-> à Napoléon III l'annonce de la conclusion de l'alliance *latente*
-> de l'Autriche et de l'Italie, alliance qui devriendrait *effective*
+> à Napoléon III l'annonce de la conclusion de l'alliance <ins>latente</ins>
+> de l'Autriche et de l'Italie, alliance qui devriendrait <ins>effective</ins>
 > si les conditions actuelles des puissances neutres se modifiaient, ou si
 > la France avait besoin, à un moment non encore précis,
 > d'une diversion sur les frontières méridionales de la Prusse.
