--- a/docs/_posts/1870-09-25-25-septembre-1870.md
+++ b/docs/_posts/1870-09-25-25-septembre-1870.md
@@ -13,7 +13,7 @@ Je vous confirme, Monsieur, ma lettre du 23 Ct. et celle de ma femme du 24 Ct.
 Après 28 heures de garde aux Fortifications je viens de rentrer à Midi. Nous
 avons eu deux alertes pendant la nuit, elles peuvent offrir quelques charmes
 à ceux qui sont militaires par état, mais je assure que pour nous, soldats
-d'hier, ça n'est pas drôle dutout. Ce cri: _aux armes_ qui retentit dans
+d'hier, ça n'est pas drôle dutout. Ce cri: <ins>aux armes</ins> qui retentit dans
 le poste et nous arrache à un sommeil agité que nous cherchons à prendre entre
 les heures rapprochées d'une faction, n'a rien de gai, et Messieurs le Baron
 Alphonse de Rothschild et Fould qui font partie de la 3e Cie, trouvent, comme
