<ins> pour souligner

--- a/docs/_posts/1870-08-05-5-aout-1870.md
+++ b/docs/_posts/1870-08-05-5-aout-1870.md
@@ -11,12 +11,12 @@ note: par Vapeur Anglais
 Monsieur A. Grünberg, à Alexandrie
 
 J'ai l'honneur de vous confirmer ma lettre du 4 Ct, par vapeur Français
-*exceptionnel*, qui a du quitter Marseille le 6 Ct. Je vous remets inclus copie
+<ins>exceptionnel</ins>, qui a du quitter Marseille le 6 Ct. Je vous remets inclus copie
 de cette lettre qui en contenait une de Madame Grünberg, et une de Mr Kunst.
 
 Mr Kunst m'a remis, ce matin, fs 51,000. pour les échéances Jacques de ce
-jour. La Banque en a présenté pour la somme de fs *46,580*. Il reste une
-Acceptation de *fs 4,350* qui n'a pas encore été présentée à l'encaissement.
+jour. La Banque en a présenté pour la somme de fs <ins>46,580</ins>. Il reste une
+Acceptation de <ins>fs 4,350</ins> qui n'a pas encore été présentée à l'encaissement.
 
 Mr Kunst m'a chargé de vous envoyer la dépêche suivante:
 
@@ -27,7 +27,7 @@ Cette dépêche est expédiée à 5 hres 1/2.
 Mme Ismalun est à Villers-sur-Mer, je lui adresse deux plis venant d'Egypte
 distribués ce matin. Rien encore pour vous.
 
-La Tte de *fs 4,350* vient d'être présentée à l'encaissement, elle est
+La Tte de <ins>fs 4,350</ins> vient d'être présentée à l'encaissement, elle est
 acquittée pour Hadamard & Bruhl à qui Mr Jacques l'avait négociée.
 
 Inclus une lettre de Madame Grünberg, la copie de celle-ci vous arrivera par la
