--- a/docs/_posts/1870-08-08-8-aout-1870.md
+++ b/docs/_posts/1870-08-08-8-aout-1870.md
@@ -5,7 +5,7 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Alexandrie
-note: par Vapeur Français
+note: Par Vapeur Français
 ---
 
 Monsieur A. Grünberg, Alexandrie
