--- a/docs/_posts/1870-08-05-5-aout-1870.md
+++ b/docs/_posts/1870-08-05-5-aout-1870.md
@@ -5,12 +5,12 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Alexandrie
-note: par Vapeur Anglais
+note: Par Vapeur Anglais
 ---
 
 Monsieur A. Grünberg, à Alexandrie
 
-J'ai l'honneur de vous confirmer ma lettre du 4 Ct, par vapeur Français
+J'ai l'honneur de vous confirmer ma lettre du 4 Ct, par Vapeur Français
 <ins>exceptionnel</ins>, qui a du quitter Marseille le 6 Ct. Je vous remets inclus copie
 de cette lettre qui en contenait une de Madame Grünberg, et une de Mr Kunst.
 
