--- a/docs/_posts/1870-09-30-30-septembre-1870.md
+++ b/docs/_posts/1870-09-30-30-septembre-1870.md
@@ -31,3 +31,9 @@ Recevez, Monsieur, l'expression de mes sentiments dévoués.
 
 
 L. Guillier
+
+
+Ecrivez-nous quand même quelques mots, on parle d'un moyen très ingénieux qui
+va nous faciliter la réception des lettres de nos parents et amis. Si
+l'aërostation doit se perfectionner, c'est à coup sur en ce moment, car rien ne
+vous relève le moral comme les sympathies qui vous arrivent de toutes parts.
