--- a/docs/_posts/1870-10-03-3-octobre-1870-(Clara).md
+++ b/docs/_posts/1870-10-03-3-octobre-1870-(Clara).md
@@ -7,7 +7,7 @@ recipient: Elisabeth Grünberg
 destination: Munich
 ---
 
-Chère Madamen,
+Chère Madame,
 
 Je viens avec bonheur causer avec vous mais que vous dire? des choses toujours
 tristes ou pénibles, terrible conséquence de la guerre!
