--- a/docs/_posts/1870-10-05-5-octobre-1870_(Clara).md
+++ b/docs/_posts/1870-10-05-5-octobre-1870_(Clara).md
@@ -5,6 +5,7 @@ place: Paris
 author: Clara Guillier
 recipient: Elisabeth Grünberg
 destination: Munich
+title: 6 Octobre 1870 (Clara)
 ---
 
 Chère Madame,
