--- a/docs/_posts/1871-01-05-5-janvier-1871.md
+++ b/docs/_posts/1871-01-05-5-janvier-1871.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 date: 1871-01-05
+date_text: 1er, 2, 3, 4 et 5 Janv. 1871
 place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
