--- a/docs/_posts/1870-08-04-4-aout-1870.md
+++ b/docs/_posts/1870-08-04-4-aout-1870.md
@@ -6,6 +6,7 @@ author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Alexandrie
 note: Par vapeur Français
+post_scriptum: P.S. Inclus une lettre de Madame et une de Mr Kunst.
 ---
 
 Monsieur A. Grünberg, Alexandrie
@@ -39,7 +40,3 @@ Livres.
 
 
 Veuillez agréer, Monsieur, l'expression de mes sentiments bien dévoués.
-
-L. Guillier
-
-S. Inclus une lettre de Madame et une de Mr Kunst.
