--- a/docs/_posts/1870-08-31-31-aout-1870.md
+++ b/docs/_posts/1870-08-31-31-aout-1870.md
@@ -5,6 +5,10 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  P.S. Je reçois à l'instant votre lettre datée du 28 Ct de Neufchatel, je me
+  conformerai à son contenu. J'ai remis votre petit mot à Mr L. Rau n'ayant pas
+  rencontré Mr Kunst chez lui.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -22,9 +26,3 @@ d'armées, on parle vaguement de quelques engagements où nous avons eu
 l'avantage.
 
 Veuillez agréer, Monsieur, l'expression de mes sentiments dévoués.
-
-L. Guillier
-
-P.S. Je reçois à l'instant votre lettre datée du 28 Ct de Neufchatel, je me
-conformerai à son contenu. J'ai remis votre petit mot à Mr L. Rau n'ayant pas
-rencontré Mr Kunst chez lui.
