--- a/docs/_posts/1870-09-05-5-septembre-1870.md
+++ b/docs/_posts/1870-09-05-5-septembre-1870.md
@@ -5,6 +5,7 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: P.S. La rente est à 54 ct.-
 ---
 
 Monsieur A. Grünberg, Munich
@@ -31,7 +32,3 @@ marche sur Paris, nous l'attendons la rage dans le cœur, nous sommes prêts
 Paris est aussi calme, à part de bruyantes manifestations dans la soirée
 d'hier, on ne se douterait pas que le gouvernement vient d'être changé. Je vous
 présente, Monsieur, mes salutations bien empressées.
-
-L. Guillier
-
-P.S. La rente est à 54 ct.-
