--- a/docs/_posts/1870-09-09-9-septembre-1870.md
+++ b/docs/_posts/1870-09-09-9-septembre-1870.md
@@ -5,6 +5,14 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  P.S. La Bourse s'est assez bien tenue aujourd'hui.-
+  
+  Ma lettre de demain vous donnera quelques détails sur ce que j'ai fait faire
+  à Croissy, il reste environ 40 personnes à Chatou et 20 à Croissy.
+  
+  Inclus la petite clef demandée par Madame Grünberg.-
+  Elle n'a pas de velours noir il est vrai, mais je n'en trouve pas d'autre.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -34,15 +42,3 @@ le passage d'hommes armés.
 Ma belle-mère venant nous rejoindre ce soir, ma femme est allée à Neuilly
 l'aider dans son déménagement, demain elle se fera un véritable plaisir
 d'écrire à Madame Grünberg. Recevez, Monsieur, mes salutations bien empressées.
-
-
-L. Guillier
-
-
-P.S. La Bourse s'est assez bien tenue aujourd'hui.-
-
-Ma lettre de demain vous donnera quelques détails sur ce que j'ai fait faire
-à Croissy, il reste environ 40 personnes à Chatou et 20 à Croissy.
-
-Inclus la petite clef demandée par Madame Grünberg.-
-Elle n'a pas de velours noir il est vrai, mais je n'en trouve pas d'autre.
