--- a/docs/_posts/1870-09-10-10-septembre-1870.md
+++ b/docs/_posts/1870-09-10-10-septembre-1870.md
@@ -5,6 +5,13 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  Ma femme n'étant pas de retour, ne pourra écrire aujourd'hui à Madame Grünberg.
+  Vous allez avoir sans-doute 3 Mobiles à loger, d'accord avec Mr Louis Rau, je
+  vais les installer dans la chambre de bonnes du cinquième étage.-
+  
+  A tout instant il arrive des troupes dans Paris. La défense à Neuilly prend des
+  proportions colossales.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -32,14 +39,3 @@ toutes armes passent et repassent sans-cesse dans cette rue Royale si
 brillantes d'équipages autrefois. Il y a une attente fiévreuse, beaucoup
 d'animation, mais l'ordre règne cependant au milieu de tout ce brouhaha. Adieu,
 Monsieur, recevez l'assurance de mes sentiments bien dévoués.
-
-
-L. Guillier
-
-Ma femme n'étant pas de retour, ne pourra écrire aujourd'hui à Madame Grünberg.
-Vous allez avoir sans-doute 3 Mobiles à loger, d'accord avec Mr Louis Rau, je
-vais les installer dans la chambre de bonnes du cinquième étage.-
-
-A tout instant il arrive des troupes dans Paris. La défense à Neuilly prend des
-proportions colossales.
-
