--- a/docs/_posts/1870-09-11-11-septembre-1870.md
+++ b/docs/_posts/1870-09-11-11-septembre-1870.md
@@ -5,6 +5,11 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  J'aurais désiré décider ma belle-mère et ma femme accompagnée de son fils
+  à partir pour St Aubin sur Mer où nous avons un logis, mais Clara n'y
+  consentait qu'à la condition que je l'accompagnerais. Ces Dames restent, du
+  moment où je me suis prononcé pour ne pas quitter le ... (suite illisible)
 ---
 
 Monsieur A. Grünberg, Munich
@@ -36,12 +41,3 @@ puissances ne sont pas d'accord.
 
 Mes respects, je vous prie à Madame Grünberg, et recevez pour vous, Monsieur,
 l'assurance de mes sentiments dévoués.
-
-
-L. Guillier
-
-J'aurais désiré décider ma belle-mère et ma femme accompagnée de son fils
-à partir pour St Aubin sur Mer où nous avons un logis, mais Clara n'y
-consentait qu'à la condition que je l'accompagnerais. Ces Dames restent, du
-moment où je me suis prononcé pour ne pas quitter le ... (suite illisible)
-
