--- a/docs/_posts/1870-09-13-13-septembre-1870-(Clara).md
+++ b/docs/_posts/1870-09-13-13-septembre-1870-(Clara).md
@@ -5,6 +5,9 @@ place: Paris
 author: Clara Guillier
 recipient: Elisabeth Grünberg
 destination: Munich
+post_scriptum: |
+  P.S. Je désire vivement faire partie d'une ambulance de Paris et vais tâcher de réussir.
+  Vous ne pouvez vous figurer, Madame, ce qu'est Paris à cette heure!
 ---
 
 
@@ -40,9 +43,3 @@ s'attend à avoir le gaz coupé prochainement; c'est gai!
 Adieu, Madame, veuillez je vous prie me rappeler au souvenir de Monsieur
 Grünberg et de votre famille et croire à mes meilleurs sentiments.
 
-
-Clara Guillier
-
-
-P.S. Je désire vivement faire partie d'une ambulance de Paris et vais tâcher de réussir.
-Vous ne pouvez vous figurer, Madame, ce qu'est Paris à cette heure!
