--- a/docs/_posts/1870-09-14-14-septembre-1870.md
+++ b/docs/_posts/1870-09-14-14-septembre-1870.md
@@ -5,6 +5,9 @@ place: Paris
 author: Clara Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  P.S. Tout marche bien comme direction de maison. Antoine me prie de vous
+  présenter ses hommages.
 ---
 
 
@@ -22,11 +25,3 @@ vous écrivons chaque jour, Monsieur, mais le service doit être bien irrégulie
 
 Veuilliez, je vous prie, Monsieur, présenter mes amitiés à Madame, et croire
 à nos sentiments affectueux et dévoués.
-
-Clara Guillier
-
-
-P.S. Tout marche bien comme direction de maison. Antoine me prie de vous
-présenter ses hommages.
-
-
