--- a/docs/_posts/1870-09-18-18-septembre-1870-(Clara).md
+++ b/docs/_posts/1870-09-18-18-septembre-1870-(Clara).md
@@ -5,6 +5,9 @@ place: Paris
 author: Clara Guillier
 recipient: Elisabeth Grünberg
 destination: Munich
+post_scriptum: |
+  P.S. Louise ne veut pas être oubliée auprès de vous; elle est très dévouée dans
+  son service.
 ---
 
 Chère Madame,
@@ -30,8 +33,3 @@ quelques bouteilles de Bordeau?
 
 Adieu, chère Madame, embrassez les enfants pour nous et croyez à mon
 attachement sincère et dévoué.
-
-C. Guillier
-
-P.S. Louise ne veut pas être oubliée auprès de vous; elle est très dévouée dans
-son service.
