--- a/docs/_posts/1870-09-18-18-septembre-1870.md
+++ b/docs/_posts/1870-09-18-18-septembre-1870.md
@@ -5,6 +5,7 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: T.S.V.P
 ---
 
 Monsieur A. Grünberg, Munich
@@ -34,10 +35,3 @@ une lettre d'elle probablement, pour Madame Grünberg.
 
 
 Veuillez agréer, Monsieur, l'expression de mes sentiments bien dévoués.
-
-
-L. Guillier
-
-
-T.S.V.P
-
