--- a/docs/_posts/1870-09-21-21-septembre-1870.md
+++ b/docs/_posts/1870-09-21-21-septembre-1870.md
@@ -5,6 +5,9 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  P.S. Latis va bien et sort tous les jours jusqu'à ce qu'il ne puisse plus
+  sortir. Je me suis précautionné de fourrages pour un mois et demi.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -23,7 +26,3 @@ pour vous et Madame Grünberg.
 
 Agréez, mon Cher Monsieur, l'expression de mes sentiments dévoués.
 
-L. Guillier
-
-P.S. Latis va bien et sort tous les jours jusqu'à ce qu'il ne puisse plus
-sortir. Je me suis précautionné de fourrages pour un mois et demi.
