--- a/docs/_posts/1870-09-22-22-septembre-1870.md
+++ b/docs/_posts/1870-09-22-22-septembre-1870.md
@@ -5,6 +5,7 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: P.S. Rien de nouveau dnas la situation.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -44,10 +45,3 @@ fille.
 
 Veuillez, Monsieur, présenter nos respects à Madame Grünberg, et agréez mes
 salutations bien empressées.
-
-
-
-L. Guillier
-
-
-P.S. Rien de nouveau dnas la situation.
