--- a/docs/_posts/1870-09-23-23-septembre-1870.md
+++ b/docs/_posts/1870-09-23-23-septembre-1870.md
@@ -5,6 +5,7 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: P.S. Ma femme vous envoie ses compliments empressés ainsi qu'à Madame Grünberg.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -24,9 +25,3 @@ repoussé à huit à dix kilomètres des positions qu'il voulait prendre.
 Je monte ma garde demain aux Fortifications pendant 24 heures.
 
 Agréez, Monsieur, l'expression de mes sentiments dévoués.
-
-
-L. Guillier
-
-
-P.S. Ma femme vous envoie ses compliments empressés ainsi qu'à Madame Grünberg.
