--- a/docs/_posts/1870-09-24-24-septembre-1870-(clara).md
+++ b/docs/_posts/1870-09-24-24-septembre-1870-(clara).md
@@ -5,6 +5,13 @@ place: Paris
 author: Clara Guillier
 recipient: Elisabeth Grünberg
 destination: Munich
+post_scriptum: |
+  J'embrasse tendrement les bébés. Mon mari a vu Monsieur Rau hier; il allait
+  très bien et venait de monter sa garde.
+  
+  P.S. Pour vous donner, Madame, une idée du prix des vivres; le beurre vaut
+  6 francs la livre; la graisse 2 francs, mais Louise et moi, nous avons notre
+  provision, des œufs 2f40 la douzaine etc etc aussi nous réduisons notre ordinaire.
 ---
 
 Bien chère Madame,
@@ -38,13 +45,3 @@ aujourd'hui; Gaston en profitera.
 
 Veuillez, Madame me rappeler au bon souvenir de Monsieur Grünberg et croire
 à ma sincère affection.
-
-
-Clara Guillier
-
-J'embrasse tendrement les bébés. Mon mari a vu Monsieur Rau hier; il allait
-très bien et venait de monter sa garde.
-
-P.S. Pour vous donner, Madame, une idée du prix des vivres; le beurre vaut
-6 francs la livre; la graisse 2 francs, mais Louise et moi, nous avons notre
-provision, des œufs 2f40 la douzaine etc etc aussi nous réduisons notre ordinaire.
