--- a/docs/_posts/1870-09-25-25-septembre-1870.md
+++ b/docs/_posts/1870-09-25-25-septembre-1870.md
@@ -5,6 +5,14 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  Jules Favre a cherché à obtenir un armistice pour pouvoir établir un
+  gouvernement régulier en nommant une Constituante, les prétentions du Roi de
+  Prusse ont été tellement exorbitantes pour l'accorder, que le gouvernement n'a
+  pu les accepter.
+  
+  J'espère que le service des ballons de la poste vous facilitera la réception de
+  mes lettres, pour nous, c'est différent nous ne recevons rien.
 ---
 
 Monsieur A. Grünberg, Munich.
@@ -30,14 +38,3 @@ destinés à des colonnes ennemies cherchant à camper à Chatou et Croissy.
 
 Nos compliments empressés à Madame Grünberg, et veuillez agréer, Monsieur,
 l'expression de mes sentiments dévoués.
-
-L. Guillier
-
-
-Jules Favre a cherché à obtenir un armistice pour pouvoir établir un
-gouvernement régulier en nommant une Constituante, les prétentions du Roi de
-Prusse ont été tellement exorbitantes pour l'accorder, que le gouvernement n'a
-pu les accepter.
-
-J'espère que le service des ballons de la poste vous facilitera la réception de
-mes lettres, pour nous, c'est différent nous ne recevons rien.
