--- a/docs/_posts/1870-09-27-27-septembre-1870.md
+++ b/docs/_posts/1870-09-27-27-septembre-1870.md
@@ -5,6 +5,11 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  P.S. Ce n'est guère que le soir ou le matin que l'on entend assez distinctement le
+  canon. Dans la journée tous les magasins sont ouverts et les voitures et
+  omnibus circulent comme d'habitude surtout dans nos quartiers et sur les
+  boulevards.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -29,11 +34,3 @@ hausse domine aujourd'hui. Toutes les affaires dureste se traitent au comptant.
 
 
 Veuillez agréer, Monsieur, l'expression de mes sentiments dévoués.
-
-
-L. Guillier
-
-P.S. Ce n'est guère que le soir ou le matin que l'on entend assez distinctement le
-canon. Dans la journée tous les magasins sont ouverts et les voitures et
-omnibus circulent comme d'habitude surtout dans nos quartiers et sur les
-boulevards.
