--- a/docs/_posts/1870-09-28-28-septembre-1870.md
+++ b/docs/_posts/1870-09-28-28-septembre-1870.md
@@ -5,6 +5,7 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: P.S. Gaston envoie ses amitiés à Emilie et Paul.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -35,8 +36,3 @@ rassurant pour l'avenir. Les vivres à Paris sont assurées pour 3 mois.
 
 Veuillez, Monsieur, présenter mes respects à Madame Grünberg et agréez, je vous
 prie, l'expression de mes sentiments dévoués.
-
-
-L. Guillier
-
-P.S. Gaston envoie ses amitiés à Emilie et Paul.
