--- a/docs/_posts/1870-10-02-2-octobre-1870.md
+++ b/docs/_posts/1870-10-02-2-octobre-1870.md
@@ -5,6 +5,11 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  Tout Paris est dehors, on se porte beaucoup aux ponts-levi, et à voir cette
+  animation de curiosité et je dirai même cette gaieté peinte sur les visages, on
+  ne se douterait pas que Paris est assiégé. C'est qu'il faut bien dire aussi que
+  plus nous allons, plus nous avons de confiance dans notre force
 ---
 
 Monsieur A. Grünberg, Munich
@@ -32,11 +37,3 @@ c'est éreintant, ça vaut une garde.
 
 Au revoir, cher Monsieur, agréez, je vous prie, l'expression de mes sentiments
 dévoués.
-
-
-L. Guillier
-
-Tout Paris est dehors, on se porte beaucoup aux ponts-levi, et à voir cette
-animation de curiosité et je dirai même cette gaieté peinte sur les visages, on
-ne se douterait pas que Paris est assiégé. C'est qu'il faut bien dire aussi que
-plus nous allons, plus nous avons de confiance dans notre force
