--- a/docs/_posts/1870-10-05-5-octobre-1870_(Clara).md
+++ b/docs/_posts/1870-10-05-5-octobre-1870_(Clara).md
@@ -6,6 +6,7 @@ author: Clara Guillier
 recipient: Elisabeth Grünberg
 destination: Munich
 title: 6 Octobre 1870 (Clara)
+post_scriptum: Mes amitiés bien affectueuses à Madame Kunst.
 ---
 
 Chère Madame,
@@ -66,11 +67,3 @@ meilleurs nous consoleront!
 
 Gaston embrasse Mimi Paul et Léon, et moi, chère Madame, je vous embrasse de
 toute mon âme.
-
-C. Guillier
-
-
-Mes amitiés bien affectueuses à Madame Kunst.
-
-
-Clara Guillier
