--- a/docs/_posts/1870-10-07-7-octobre-1870.md
+++ b/docs/_posts/1870-10-07-7-octobre-1870.md
@@ -5,6 +5,10 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  P.S. Nous sommes arrivés, je crois, à la fin des beaux jours, la journée d'hier
+  a été brumeuse, et le temps menace aujourd'hui, la pluie n'est pas loin, tampis
+  et tourmieuse.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -28,11 +32,3 @@ nourri des forts. Demain je vous ferai connaître les résultats officiels.
 Je vous présente, mon cher Monsieur, mes salutations bien empressées. Votre
 dernière lettre est du 13 7bre, quand en recevrai-je une autre, Dieu seul le
 sait!
-
-
-
-L. Guillier
-
-P.S. Nous sommes arrivés, je crois, à la fin des beaux jours, la journée d'hier
-a été brumeuse, et le temps menace aujourd'hui, la pluie n'est pas loin, tampis
-et tourmieuse.
