--- a/docs/_posts/1870-10-09-9-octobre-1870.md
+++ b/docs/_posts/1870-10-09-9-octobre-1870.md
@@ -5,6 +5,7 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: P.S. J'ai [illisible]
 ---
 
 Monsieur A. Grünberg, Munich
@@ -38,7 +39,3 @@ remplacerait la pierre et que des inscriptions en lettres d'or rappelleraient
 aux générations à venir la défense héroïque du grave Général Ulric.
 
 Je vous présente, Monsieur, mes salutations bien empressées.
-
-L. Guillier
-
-P.S. J'ai [illisible]
