--- a/docs/_posts/1870-10-12-12-octobre-1870.md
+++ b/docs/_posts/1870-10-12-12-octobre-1870.md
@@ -5,6 +5,13 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  Les Tuileries, le Palais Royal, le Ministère de la Marine, le Grand Hôtel et
+  une infinité d'Immeubles spacieux sont convertis en ambulance, tous les
+  théatres sont fermés depuis 3 semaines et les becs de Gaz dans Prais sont
+  réduits de moitié, à cela près, Paris est toujours le même, mais à dix heures
+  et demie tous les établissements fermant, à 11 heures tout le monde est couché,
+  et l'on veille aux remparts.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -34,12 +41,3 @@ ouvrir, faciliteront les achats par des bulletins nominatifs, seulement on sera
 rationné à 100 grammes par jour par personne, on n'en mourra pas.
 
 Veuillez agréer, Monsieur, mes salutations bien empressées.
-
-L. Guillier
-
-Les Tuileries, le Palais Royal, le Ministère de la Marine, le Grand Hôtel et
-une infinité d'Immeubles spacieux sont convertis en ambulance, tous les
-théatres sont fermés depuis 3 semaines et les becs de Gaz dans Prais sont
-réduits de moitié, à cela près, Paris est toujours le même, mais à dix heures
-et demie tous les établissements fermant, à 11 heures tout le monde est couché,
-et l'on veille aux remparts.
