--- a/docs/_posts/1870-10-13-13-octobre-1870.md
+++ b/docs/_posts/1870-10-13-13-octobre-1870.md
@@ -5,6 +5,10 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  P.S. Latis et Bibi vont bien et s'aperçoivent bien moins que nous des
+  privations que nous impose l'état d'investissement dans lequel nous nous
+  trouvons momentanément.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -32,9 +36,3 @@ qu'elle avait pleine et entière confiance dans le Gouvernement de la défense.
 
 Veuillez agréer, Monsieur, présenter mes compliments empressés à Madame
 Grünberg, et agréez, je vous prie, l'expression de mes sentiments dévoués.
-
-L. Guillier
-
-P.S. Latis et Bibi vont bien et s'aperçoivent bien moins que nous des
-privations que nous impose l'état d'investissement dans lequel nous nous
-trouvons momentanément.
