--- a/docs/_posts/1870-10-15-15-octobre-1870.md
+++ b/docs/_posts/1870-10-15-15-octobre-1870.md
@@ -5,6 +5,14 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  Le service des Ballons va se régulariser, tous les deux jours nos lettres
+  partiront. Nous sommes bien impatients de recevoir de vos nouvelles, vous vous
+  serez sans doute rendu à notre désir et nous espérons qu'un de ces matins nous
+  aurons le plaisir de vous lire.
+  
+  Mr Louis Rau m'a remis le montant de votre loyer et vos contributions sont
+  payées pour l'année complète. Antonio et Louise se rappèlent à votre souvenir.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -35,15 +43,3 @@ légions innombrables qui marchent sur Paris, nous attendons avec résignation
 l'heure de la délivrance.
 
 Recevez, cher Monsieur, l'expressoin de mes sentiments dévoués.
-
-
-L. Guillier
-
-
-Le service des Ballons va se régulariser, tous les deux jours nos lettres
-partiront. Nous sommes bien impatients de recevoir de vos nouvelles, vous vous
-serez sans doute rendu à notre désir et nous espérons qu'un de ces matins nous
-aurons le plaisir de vous lire.
-
-Mr Louis Rau m'a remis le montant de votre loyer et vos contributions sont
-payées pour l'année complète. Antonio et Louise se rappèlent à votre souvenir.
