--- a/docs/_posts/1870-10-27-27-octobre-1870-(Clara).md
+++ b/docs/_posts/1870-10-27-27-octobre-1870-(Clara).md
@@ -5,6 +5,14 @@ place: Paris
 author: Clara Guillier
 recipient: Elisabeth Grünberg
 destination: Munich
+post_scriptum: |
+  Antonio se remet bien lentement.
+  
+  Gaston embrasse vos chers enfants; il est inséparable de bibi et c'est son vrai
+  jouet préféré, aussi bibi dîne toujours avec nous et elle se bourre de pains
+  d'épice Ségault.
+  
+  Latis va très bien et ne s'aperçoit pas de la guerre.
 ---
 
 Bien chère Madame,
@@ -45,12 +53,4 @@ quelle chance de ménager pour un jour mes provisions; <ins class="straight">on 
 Je vous embrasse bien tendrement, et je serre affecteusement la main à Monsieur
 Grünberg.
 
-Votre toute dévouée Clara Guillier
-
-Antonio se remet bien lentement.
-
-Gaston embrasse vos chers enfants; il est inséparable de bibi et c'est son vrai
-jouet préféré, aussi bibi dîne toujours avec nous et elle se bourre de pains
-d'épice Ségault.
-
-Latis va très bien et ne s'aperçoit pas de la guerre.
+Votre toute dévouée
