--- a/docs/_posts/1870-10-30-30-octobre-1870.md
+++ b/docs/_posts/1870-10-30-30-octobre-1870.md
@@ -5,6 +5,9 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  Etant de garde, demain, aux remparts, ma femme me remplacera pour la lettre du
+  jour, elle se fait un véritable plaisir de causer un peu avec Madame Grünberg.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -37,9 +40,3 @@ du cheval, mais avant le 15 novembre, Paris aura la facilité de se ravitailler.
 
 Veuillez, Monsieur, présenter nos respects à Madame Grünberg, et agréez, je
 vous prie, mes salutations bien empressées.
-
-L. Guillier
-
-
-Etant de garde, demain, aux remparts, ma femme me remplacera pour la lettre du
-jour, elle se fait un véritable plaisir de causer un peu avec Madame Grünberg.
