--- a/docs/_posts/1870-11-14-14-novembre-1870-(Clara).md
+++ b/docs/_posts/1870-11-14-14-novembre-1870-(Clara).md
@@ -5,6 +5,7 @@ place: Paris
 author: Clara Guillier
 recipient: Elisabeth Grünberg
 destination: Munich
+post_scriptum: Mille choses aimables à Mr et Mme Kunst.
 ---
 
 Bien chère Madame,
@@ -36,7 +37,3 @@ sont réellement jetées au vent comme le ballon qui les emporte!
 
 Je vous envoie ainsi, qu'à Monsieur Grünberg, l'expresion de ma profonde
 affection. Gaston embrasse tous les bébés.
-
-Clara Guillier
-
-Mille choses aimables à Mr et Mme Kunst.
