--- a/docs/_posts/1870-11-16-16-novembre-1870.md
+++ b/docs/_posts/1870-11-16-16-novembre-1870.md
@@ -5,6 +5,7 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: P.S. J'ai vu Monsieur Louis ce matin, il se porte très bien.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -39,7 +40,3 @@ du 13 Ct s'applique à l'Etranger, demain je dois être fixé et vous en parlera
 
 Veuillez, Monsieur, nous rappeler au souvenir de Madame Grünberg et agréez, je
 vous prie l'expression de mes sentiments dévoués.
-
-L. Guillier
-
-P.S. J'ai vu Monsieur Louis ce matin, il se porte très bien.
