--- a/docs/_posts/1870-11-18-18-novembre-1870.md
+++ b/docs/_posts/1870-11-18-18-novembre-1870.md
@@ -5,6 +5,11 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  P.S. Dans le cas où vous n'auriez pas reçu ma lettre précédente, je vous
+  rappelle que votre dépêche de 20 mots munie de fs 10 de timbres-poste doit être
+  adressée à: Monsieur le Délégué du Directeur Gal des Postes (Puy de Dôme)
+  à Clermont-Ferrand.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -35,11 +40,3 @@ Nous ignorons complètement ce qui se passe en fait de diplomatie.
 
 Veuillez, Monsieur, présenter nos respects à Madame Grünberg, et agréez, je
 vous prie, mes salutations bien empressées.
-
-
-L. Guillier
-
-P.S. Dans le cas où vous n'auriez pas reçu ma lettre précédente, je vous
-rappelle que votre dépêche de 20 mots munie de fs 10 de timbres-poste doit être
-adressée à: Monsieur le Délégué du Directeur Gal des Postes (Puy de Dôme)
-à Clermont-Ferrand.
