--- a/docs/_posts/1870-11-19-19-novembre-1870.md
+++ b/docs/_posts/1870-11-19-19-novembre-1870.md
@@ -5,6 +5,7 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: P.S. Etant de garde aux remparts demain, ma femme ...
 ---
 
 Monsieur A. Grünberg, Munich
@@ -41,7 +42,3 @@ Il est soigné le mieux possible, et je crois que ce qu'il y a de mieux à faire
 c'est de patienter, sa forte constitution résistera peut-être.
 
 Recevez, Monsieur, l'expression de mes sentiments dévoués.
-
-L. Guillier
-
-P.S. Etant de garde aux remparts demain, ma femme ...
