--- a/docs/_posts/1870-11-22-22-novembre-1870.md
+++ b/docs/_posts/1870-11-22-22-novembre-1870.md
@@ -5,6 +5,12 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  P.S. Je crois vous avoir dit qu'Amant avait été rappelé dans son pays pour être
+  enrôlé dans les cadres de l'armée, je l'avais remplacé par un nommé Georges qui
+  vient d'être mobilisé dans les compagnies de guerre de la Garde-Nationale de
+  Paris, et qui probablement sous peu de jours va être appelé à l'activité.
+  J'arriverai de nouveau ...
 ---
 
 Monsieur A. Grünberg, Munich
@@ -37,11 +43,3 @@ les gens de votre maison.
 Je l'ai vu aujourd'hui, sa santé est excellente.
 
 Recevez, Monsieur, l'expression de mes sentiments dévoués.
-
-L. Guillier
-
-P.S. Je crois vous avoir dit qu'Amant avait été rappelé dans son pays pour être
-enrôlé dans les cadres de l'armée, je l'avais remplacé par un nommé Georges qui
-vient d'être mobilisé dans les compagnies de guerre de la Garde-Nationale de
-Paris, et qui probablement sous peu de jours va être appelé à l'activité.
-J'arriverai de nouveau ...
