--- a/docs/_posts/1871-01-05-5-janvier-1871.md
+++ b/docs/_posts/1871-01-05-5-janvier-1871.md
@@ -6,6 +6,9 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  P.S. Gaston envoie ses compliments de bonne année à Monsieur et Madame
+  Grünberg et regrette de [illisible]
 ---
 
 Monsieur A. Grünberg, Munich
@@ -33,10 +36,3 @@ nous fassions du feu continuellement dans sa chambre, il est on ne peut plus
 sensible au froid qui règne constamment.
 
 Veuillez agréer, Monsieur, mes salutations bien empressées.
-
-L. Guilliez
-
-
-P.S. Gaston envoie ses compliments de bonne année à Monsieur et Madame
-Grünberg et regrette de [illisible]
-
