--- a/docs/_posts/1871-01-06-6-janvier-1871-(Clara).md
+++ b/docs/_posts/1871-01-06-6-janvier-1871-(Clara).md
@@ -5,6 +5,13 @@ place: Paris
 author: Clara Guillier
 recipient: Elisabeth Grünberg
 destination: Munich
+post_scriptum: |
+  P.S. Je m'aperçois avoir bien abusé du mot _rare_ dans ma lettre, mais c'est le
+  mot du moment et des situations.
+  
+  Embrassez bien Madame & tous vos chers bébés; à bientôt l'arrivée au numéro 4.
+  
+  Antonio ne se remet pas; nous en sommes tourmentés.
 ---
 
 
@@ -55,13 +62,3 @@ rétablir, et qui bénissent Monsieur Grünberg.
 
 Adieu Madame, puissent ces lignes vous parvenir en vous envoyant l'assurance
 d'une vraie affection, ainsi qu'à Monsieur Grünberg.
-
-C. Guillier
-
-
-P.S. Je m'aperçois avoir bien abusé du mot _rare_ dans ma lettre, mais c'est le
-mot du moment et des situations.
-
-Embrassez bien Madame & tous vos chers bébés; à bientôt l'arrivée au numéro 4.
-
-Antonio ne se remet pas; nous en sommes tourmentés.
