--- a/docs/_posts/1870-08-08-8-aout-1870.md
+++ b/docs/_posts/1870-08-08-8-aout-1870.md
@@ -6,6 +6,9 @@ author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Alexandrie
 note: Par Vapeur Français
+post_scriptum: |
+  P.S. Madame Grünberg et les enfants se portent bien.
+  Mr Emile Vanderheyan est parti, samedi, pour Lille comme capitaine de la ...
 ---
 
 Monsieur A. Grünberg, Alexandrie
@@ -36,8 +39,3 @@ complément des fs 200,000 que vous lui avez demandés.
 Agréez, Monsieur, l'expression de mes sentiments dévoués.
 
 Inclus une lettre de Madame Grünberg.
-
-L. Guillier
-
-P.S. Madame Grünberg et les enfants se portent bien.
-Mr Emile Vanderheyan est parti, samedi, pour Lille comme capitaine de la ...
