--- a/docs/_posts/1870-09-19-19-septembre-1870.md
+++ b/docs/_posts/1870-09-19-19-septembre-1870.md
@@ -6,6 +6,7 @@ author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
 note: Du cabinet de l'Intendant Gal de la défense nationale
+post_scriptum: Mon beau-frère vient d'être nommé Sous-Intendant qui répond au Grade de Commandant.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -23,12 +24,4 @@ quitte pour aller faire ma faction.
 
 
 Veuillez agréer, je vous prie, l'expression de mes sentiments dévoués.
-
-
-L. Guillier
-
-
-Mon beau-frère vient d'être nommé Sous-Intendant qui répond au Grade de
-Commandant.
-
 
