--- a/docs/_posts/1870-09-30-30-septembre-1870.md
+++ b/docs/_posts/1870-09-30-30-septembre-1870.md
@@ -5,6 +5,11 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  Ecrivez-nous quand même quelques mots, on parle d'un moyen très ingénieux qui
+  va nous faciliter la réception des lettres de nos parents et amis. Si
+  l'aërostation doit se perfectionner, c'est à coup sur en ce moment, car rien ne
+  vous relève le moral comme les sympathies qui vous arrivent de toutes parts.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -28,12 +33,3 @@ Tous les Schwabacher ont gagné Londres. Tous les Halphen sont sous les armes,
 j'ai vu Mr Joseph avec des Sardines de Caporal.
 
 Recevez, Monsieur, l'expression de mes sentiments dévoués.
-
-
-L. Guillier
-
-
-Ecrivez-nous quand même quelques mots, on parle d'un moyen très ingénieux qui
-va nous faciliter la réception des lettres de nos parents et amis. Si
-l'aërostation doit se perfectionner, c'est à coup sur en ce moment, car rien ne
-vous relève le moral comme les sympathies qui vous arrivent de toutes parts.
