--- a/docs/_posts/1870-10-10-10-octobre-1870.md
+++ b/docs/_posts/1870-10-10-10-octobre-1870.md
@@ -5,6 +5,12 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+post_scriptum: |
+  On parle beaucoup aujourd'hui de retour à Paris du Gal américain Burnside qui
+  après avoir passé plusieurs jours dans le camp ennemi, aurait une communication
+  à faire au Gouvernement. On le croit porteur de paroles de conciliation, mais
+  rien encore n'a transpiré à ce sujet, et la réponse faite à Jules Favre laisse
+  peu d'espoir.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -30,12 +36,3 @@ excellent, la rente monte, et plus que jamais, l'on se sent fort contre
 l'ennemi. Le moment des défaillances est passé.
 
 Recevez, mon cher Monsieur, l'expression de mes sentiments dévoués.
-
-L. Guillier
-
-
-On parle beaucoup aujourd'hui de retour à Paris du Gal américain Burnside qui
-après avoir passé plusieurs jours dans le camp ennemi, aurait une communication
-à faire au Gouvernement. On le croit porteur de paroles de conciliation, mais
-rien encore n'a transpiré à ce sujet, et la réponse faite à Jules Favre laisse
-peu d'espoir.
