--- a/docs/_posts/1870-10-24-24-octobre-1870.md
+++ b/docs/_posts/1870-10-24-24-octobre-1870.md
@@ -6,6 +6,11 @@ author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
 note: 37me Journée du siège
+post_scriptum: |
+  Le Gouvernement ayant fait paraître un ordre pour la réquisition des fourages,
+  je me suis précautionné de quantités suffisantes pour les assurer à Latis
+  jusqu'à la fin de l'année. Dame, Bêtes et gens doivent se rationner
+  aujourd'hui.
 ---
 
 Monsieur A. Grünberg, Munich
@@ -39,11 +44,3 @@ peur un moment qu'il ne s'en relève pas. Il respire plus librement, et ses
 traits altérés reprennent leur physionomie habituelle.
 
 Agréez, Monsieur, mes civilités empressées.
-
-L. Guillier
-
-
-Le Gouvernement ayant fait paraître un ordre pour la réquisition des fourages,
-je me suis précautionné de quantités suffisantes pour les assurer à Latis
-jusqu'à la fin de l'année. Dame, Bêtes et gens doivent se rationner
-aujourd'hui.
