--- a/docs/_posts/1870-09-14-14-septembre-1870.md
+++ b/docs/_posts/1870-09-14-14-septembre-1870.md
@@ -23,5 +23,5 @@ vont être brûlés; quelques canons ont été essayés ce matin; Dieu! que c'es
 triste; quel sera le dénouement? Pour le moment, résignation et espoir. Nous
 vous écrivons chaque jour, Monsieur, mais le service doit être bien irrégulier.
 
-Veuilliez, je vous prie, Monsieur, présenter mes amitiés à Madame, et croire
+Veuillez, je vous prie, Monsieur, présenter mes amitiés à Madame, et croire
 à nos sentiments affectueux et dévoués.
